[package]
name = "seisen"
version = "0.1.0"
authors = ["nk86"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.0"
petgraph = "0.5.0"
itertools = "0.10.0"
proconio = { version = "0.4.1", features = ["derive"] }
